--- a/templates/admin/alunos/detalhes.html
+++ b/templates/admin/alunos/detalhes.html
@@ -1,3 +1,6 @@
+{% extends 'index.html' %}
+
+{% block body %}
 <div>
   <h5 class="">Detalhes do Aluno</h5>
   <form class="class="row row-cols-lg-auto g-3"">
@@ -113,3 +116,5 @@
     </tr>
   </tbody>
 </table>
+
+{% endblock %}
