--- a/templates/admin/alunos/editar.html
+++ b/templates/admin/alunos/editar.html
@@ -1,3 +1,6 @@
+{% extends 'index.html' %}
+
+{% block body %}
 <div>
   <h5 class="">Editar Aluno</h5>
   <form class="class="row row-cols-lg-auto g-3"">
@@ -66,3 +69,5 @@
       <button type="submit" class="btn btn-success">Cadastrar</button>
   </div>
 </form>
+
+{% endblock %}
