--- a/templates/admin/alunos/visualizar.html
+++ b/templates/admin/alunos/visualizar.html
@@ -1,3 +1,6 @@
+{% extends 'index.html' %}
+
+{% block body %}
 <div>
   <h5 class="">Visualizar Alunos</h5>
   <form class="class="row row-cols-lg-auto g-3"">
@@ -77,3 +80,5 @@
     </tr>
   </tbody>
 </table>
+
+{% endblock %}
