--- a/templates/admin/cursos/cadastrar.html
+++ b/templates/admin/cursos/cadastrar.html
@@ -1,3 +1,7 @@
+{% extends 'index.html' %}
+
+{% block body %}
+
 <h5>Cadastro de Curso</h5>
 <hr>
 <form>
@@ -52,3 +56,5 @@
   src="https://code.jquery.com/jquery-3.6.2.slim.min.js"
   integrity="sha256-E3P3OaTZH+HlEM7f1gdAT3lHAn4nWBZXuYe89DFg2d0="
   crossorigin="anonymous"></script>
+
+{% endblock %}
