--- a/templates/admin/cursos/detalhes.html
+++ b/templates/admin/cursos/detalhes.html
@@ -1,3 +1,7 @@
+{% extends 'index.html' %}
+
+{% block body %}
+
 <div>
   <h5 class="">Detalhes do Cursos</h5>
   <form class="class="row row-cols-lg-auto g-3"">
@@ -93,3 +97,5 @@
     </tr>
   </tbody>
 </table>
+
+{% endblock %}
