--- a/templates/admin/cursos/visualizar.html
+++ b/templates/admin/cursos/visualizar.html
@@ -1,3 +1,7 @@
+{% extends 'index.html' %}
+
+{% block body %}
+
 <div>
   <h5 class="">Visualizar Cursos</h5>
   <form class="class="row row-cols-lg-auto g-3"">
@@ -77,3 +81,5 @@
     </tr>
   </tbody>
 </table>
+
+{% endblock %}
