--- a/templates/admin/cursos/editar.html
+++ b/templates/admin/cursos/editar.html
@@ -1,3 +1,7 @@
+{% extends 'index.html' %}
+
+{% block body %}
+
 <h5>Cadastro de Curso</h5>
 <hr>
 <form>
@@ -55,3 +59,5 @@
       <button type="submit" class="btn btn-success">Cadastrar</button>
   </div>
 </form>
+
+{% endblock %}
