--- a/templates/admin/alunos/ocultar.html
+++ b/templates/admin/alunos/ocultar.html
@@ -20,13 +20,13 @@
                 </div>
                 <div class="form-group col-md-5">
                   <label for="inputZip">Data Matricula</label>
-                  <input type="date" name="date" class="form-control" id="inputZip">
+                  <input type="date" name="dataMatricula" class="form-control" id="inputZip">
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputState">Status</label>
-                    <select id="inputState" name="status" class="form-control">
-                      <option value="active">ATIVO</option>
-                      <option value="suspend">SUSPENSO</option>
+                    <select id="inputState" name="matriculaAtiva" class="form-control">
+                      <option value="0">ATIVO</option>
+                      <option value="1">SUSPENSO</option>
                     </select>
                 </div>
             </div>
