--- a/templates/admin/cursos/cadastrar.html
+++ b/templates/admin/cursos/cadastrar.html
@@ -22,7 +22,7 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-3">
-      <input type="number" min="1" name="quantidade-disciplinas" class="form-control" id="quantidade-disciplinas" placeholder="QTD. Disciplinas do Curso">
+      <input type="number" min="1" max="60" name="quantidade-disciplinas" class="form-control" id="quantidade-disciplinas" placeholder="QTD. Disciplinas do Curso">
     </div>
     <div class="form-group col-md-2">
         <input id="gerar-campos" type="button" value="Gerar Campos" class="btn btn-success">
@@ -36,8 +36,9 @@
         </div>
         <input type="text" class="form-control" name="carga-horaria" id="carga-horaria" placeholder="Carga Horária do Curso">
     </div>
-    <hr>
   </div>
+  
+  <hr>
 
   <div id="area-campos" class="form-row">
     <!-- Campos nome e id da disciplina -->
@@ -63,6 +64,9 @@
     $(function() {
       $("#gerar-campos").click( () => {
         let quantidade = $("#quantidade-disciplinas").val();
+        //garante que quantidade seja sempre menor que 60.
+        if(quantidade > 60) { quantidade = 1 }
+
         const campos = $("#area-campos");
 
         if (quantidade) {
