--- a/templates/admin/alunos/ocultar.html
+++ b/templates/admin/alunos/ocultar.html
@@ -47,8 +47,8 @@
                     </select>
                 </div>
                 <div class="form-group col-md-3">
-                    <label for="inputState">Cronograma</label>
-                    <select id="inputState" name="schedule" class="form-control">
+                    <label for="cronograma">Cronograma</label>
+                    <select id="cronograma" name="cronograma" class="form-control">
                       <option value="6">6x</option>
                       <option value="9">9x</option>
                       <option value="12">12x</option>
