--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                 <a class="dropdown-item" href="/admin/editar-aluno">Editar</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/admin/visualizar-alunos">Visualizar</a>
-                <a class="dropdown-item" href="/admin/detalhes-aluno">Detalhes</a>
+                <a class="dropdown-item" href="/admin/ocultar-aluno">Ocultar</a>
                 </div>
             </li>
     
